NetBSD Problem Report #43433

From www@NetBSD.org  Tue Jun  8 03:28:53 2010
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.netbsd.org [204.152.190.11])
	by www.NetBSD.org (Postfix) with ESMTP id 8606863B907
	for <gnats-bugs@gnats.NetBSD.org>; Tue,  8 Jun 2010 03:28:53 +0000 (UTC)
Message-Id: <20100608032853.0CE9C63B8FF@www.NetBSD.org>
Date: Tue,  8 Jun 2010 03:28:52 +0000 (UTC)
From: martin@martinbrandenburg.net
Reply-To: martin@martinbrandenburg.net
To: gnats-bugs@NetBSD.org
Subject: X -configure coredumps with multiple module errors
X-Send-Pr-Version: www-1.0

>Number:         43433
>Category:       xsrc
>Synopsis:       X -configure coredumps with multiple module errors
>Confidential:   no
>Severity:       critical
>Priority:       medium
>Responsible:    mrg
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Tue Jun 08 03:30:00 +0000 2010
>Closed-Date:    Wed Jun 09 03:08:08 +0000 2010
>Last-Modified:  Wed Jun 09 03:08:08 +0000 2010
>Originator:     Martin Brandenburg
>Release:        NetBSD 5.99.29 amd64
>Organization:
>Environment:
NetBSD desktop.local 5.99.29 NetBSD 5.99.29 (GENERIC) #0: Sat May 29 09:12:47 UTC 2010  builds@b8.netbsd.org:/home/builds/ab/HEAD/amd64/201005290000Z-obj/home/builds/ab/HEAD/src/sys/arch/amd64/compile/GENERIC amd64
>Description:
When configuring Xorg with X -configure, the following message appears:

.Org X Server 1.6.5
Release Date: 2009-10-12
X Protocol Version 11, Revision 0
Build Operating System: NetBSD/amd64  - 
Current Operating System: NetBSD desktop.local 5.99.29 NetBSD 5.99.29 (GENERIC) #0: Sat May 29 09:12:47 UTC 2010  builds@b8.netbsd.org:/home/builds/ab/HEAD/amd64/201005290000Z-obj/home/builds/ab/HEAD/src/sys/arch/amd64/compile/GENERIC amd64
Build Date: 12 October 2009  12:14:03AM

        Before reporting problems, check http://wiki.X.Org
        to make sure that you have the latest version.
Markers: (--) probed, (**) from config file, (==) default setting,
        (++) from command line, (!!) notice, (II) informational,
        (WW) warning, (EE) error, (NI) not implemented, (??) unknown.
(==) Log file: "/var/log/Xorg.0.log", Time: Tue Jun  1 17:44:25 2010
List of video drivers:
        apm
        ark
        ast
        ati
        ch7017
        ch7xxx
        chips
        cirrus
        glint
        i128
        i740
        intel
        ivch
        kbd
        mach64
        nv
        mga
        mouse
        neomagic
        openchrome
        r128
        radeon
        radeonhd
        s3
        sis
        tdfx
        s3virge
        savage
        sil164
        siliconmotion
        tfp410
        tga
        trident
        tseng
        vmwlegacy
        ws
        vmmouse
        vmware
        wsfb
        vesa
dlopen: /usr/X11R7/lib/modules/drivers//openchrome_drv.so: Undefined symbol "XAACopyROP" (symnum = 100)
(EE) Failed to load /usr/X11R7/lib/modules/drivers//openchrome_drv.so
(EE) Failed to load module "openchrome" (loader failed, 7)
vmware: Please ignore above "FATAL: Module vmwgfx not found."

Fatal server error:
Caught signal 11.  Server aborting


Please consult the The X.Org Foundation support 
         at http://wiki.X.Org
 for help. 
Please also check the log file at "/var/log/Xorg.0.log" for additional information.

Abort (core dumped)


>How-To-Repeat:
Install 5.0.2, update to -current from the sets at http://nyftp.netbsd.org/pub/NetBSD-daily/HEAD/201005290000Z/amd64/.

Run X -configure.
>Fix:

>Release-Note:

>Audit-Trail:

Responsible-Changed-From-To: xsrc-manager->mrg
Responsible-Changed-By: mrg@NetBSD.org
Responsible-Changed-When: Tue, 08 Jun 2010 04:00:08 +0000
Responsible-Changed-Why:
i'll fix it


From: matthew green <mrg@eterna.com.au>
To: gnats-bugs@NetBSD.org
Cc: xsrc-manager@netbsd.org, gnats-admin@netbsd.org,
    netbsd-bugs@netbsd.org
Subject: re: xsrc/43433: X -configure coredumps with multiple module errors
Date: Tue, 08 Jun 2010 13:59:25 +1000

 > >Synopsis:       X -configure coredumps with multiple module errors

 this isn't *really* true.  there's only one error, the other
 one (vmwgfx) is infact talking about a (linux) kernle module,
 and you'll notice the message it says to ignore doesn't occur.

 > dlopen: /usr/X11R7/lib/modules/drivers//openchrome_drv.so: Undefined symbol "XAACopyROP" (symnum = 100)
 > (EE) Failed to load /usr/X11R7/lib/modules/drivers//openchrome_drv.so
 > (EE) Failed to load module "openchrome" (loader failed, 7)

 i'll have a look.

 > vmware: Please ignore above "FATAL: Module vmwgfx not found."


 .mrg.

From: matthew green <mrg@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/43433 CVS commit: xsrc/external/mit/xf86-video-openchrome/include
Date: Tue, 8 Jun 2010 04:31:23 +0000

 Module Name:	xsrc
 Committed By:	mrg
 Date:		Tue Jun  8 04:31:23 UTC 2010

 Added Files:
 	xsrc/external/mit/xf86-video-openchrome/include: config.h

 Log Message:
 include a config.h for openchrome as well.  part of PR#43433.


 To generate a diff of this commit:
 cvs rdiff -u -r0 -r1.1 \
     xsrc/external/mit/xf86-video-openchrome/include/config.h

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

From: matthew green <mrg@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/43433 CVS commit: src/external/mit/xorg/server/drivers/xf86-video-openchrome
Date: Tue, 8 Jun 2010 04:31:43 +0000

 Module Name:	src
 Committed By:	mrg
 Date:		Tue Jun  8 04:31:43 UTC 2010

 Modified Files:
 	src/external/mit/xorg/server/drivers/xf86-video-openchrome: Makefile

 Log Message:
 look for and find config.h.  part of PR#43433.


 To generate a diff of this commit:
 cvs rdiff -u -r1.1 -r1.2 \
     src/external/mit/xorg/server/drivers/xf86-video-openchrome/Makefile

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->feedback
State-Changed-By: mrg@NetBSD.org
State-Changed-When: Tue, 08 Jun 2010 04:36:05 +0000
State-Changed-Why:
can you update both src and xsrc and see how it goes?  thanks.


From: Martin Brandenburg <martin@martinbrandenburg.net>
To: gnats-bugs@NetBSD.org
Cc: 
Subject: Re: xsrc/43433 (X -configure coredumps with multiple module errors)
Date: Tue, 8 Jun 2010 22:24:34 -0400

 On Jun 8, 2010, at 12:36 AM, mrg@NetBSD.org wrote:

 > Synopsis: X -configure coredumps with multiple module errors
 >
 > State-Changed-From-To: open->feedback
 > State-Changed-By: mrg@NetBSD.org
 > State-Changed-When: Tue, 08 Jun 2010 04:36:05 +0000
 > State-Changed-Why:
 > can you update both src and xsrc and see how it goes?  thanks.
 >
 >
 >

 X -configure works just fine here on 5.99.30 now. Thanks.

State-Changed-From-To: feedback->closed
State-Changed-By: mrg@NetBSD.org
State-Changed-When: Wed, 09 Jun 2010 03:08:08 +0000
State-Changed-Why:
great, thanks!


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.