include a config.h for openchrome as well.  part of PR#43433.